objects/ssot__ReturnOrderProdPriceAdj__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Coupon__c</fullName>
        <label>CouponId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Return Order Prod Price Adj Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Promotion__c</fullName>
        <label>PromotionId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductId__c</fullName>
        <label>Return Order Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjustmentId__c</fullName>
        <label>Sales Order Product Price Adjustment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WithTaxTotalAmount__c</fullName>
        <label>With Tax Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216885_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProdPriceAdj_SalesOrderPr_rel</label>
        <referenceTo>ssot__SalesOrderProductPriceAdjustment__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProdPriceAdj_SalesOrderPr_rel</relationshipLabel>
        <relationshipName>rel_1697761216885_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217030_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProdPriceAdj_Promotion_ma_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProdPriceAdj_Promotion_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761217030_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217097_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProdPriceAdj_ReturnOrderP_rel</label>
        <referenceTo>ssot__ReturnOrderProduct__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProdPriceAdj_ReturnOrderP_rel</relationshipLabel>
        <relationshipName>rel_1697761217097_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>